--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -31,7 +31,7 @@ blur-background-fixed = true;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'",
-    "window_type = 'Conky'"
+    "class_g = 'Conky'",
 ];
 blur-kern = "3x3box";
 blur-method = "dual_kawase";
