--- a/config/i3/config
+++ b/config/i3/config
@@ -2,6 +2,7 @@
 #
 
 #exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/medusa.png
+exec_always --no-startup-id xterm -e '/bin/bash ~/bootconf.sh'
 
 set $mod Mod4
 
