--- a/config/i3status/i3status.conf
+++ b/config/i3status/i3status.conf
@@ -21,7 +21,7 @@ order += "volume master"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "memory"
-order += "battery 1"
+#order += "battery 1"
 order += "tztime local"
 
 wireless _first_ {
@@ -57,7 +57,7 @@ disk "/home" {
 volume master {
         format = ": %volume"
         format_muted = ": muted (%volume)"
-	device = "hw:0"
+	device = "default"
 }
 
 load {
@@ -71,7 +71,7 @@ memory {
 
 cpu_temperature 0 {
         format = " %degrees°C "
-        path = "/sys/class/thermal/thermal_zone1/temp"
+        path = "/sys/class/thermal/thermal_zone0/temp"
 }
 
 cpu_usage {
