--- a/config/i3/config
+++ b/config/i3/config
@@ -1,7 +1,7 @@
 # i3 config file for AurisPi (v4)
 #
 
-#exec --no-startup-id feh --bg-scale ~/Pictures/wallpapers/medusa.png
+exec --no-startup-id feh --bg-scale ~/Pictures/euphoria.png
 exec_always --no-startup-id xterm -e '/bin/bash ~/bootconf.sh'
 
 set $mod Mod4
