--- a/config/conky/conky.conf
+++ b/config/conky/conky.conf
@@ -38,7 +38,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     use_xft = true,
-    font = 'DejaVu Sans Mono:size=15',
+    font = 'DejaVuSansMono Nerd Font:size=15',
     gap_x = 2,
     gap_y = 2,
     minimum_height = 5,
@@ -75,7 +75,8 @@ ${color grey}CPU Usage:$color $cpu% ${cpubar 4}
 ${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
 $hr
 ${color grey}File systems:
- / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
+  $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
+ 禍 $color${fs_used /mnt/Storage}/${fs_size /mnt/Storage} ${fs_bar 6 /mnt/Storage}
 ${color grey}Networking:
 ${if_existing /proc/net/route wlan0}Up:$color ${upspeed wlan0} ${color grey} - Down:$color${downspeed wlan0} - ${wireless_essid} ${addr wlan0}
 ${else}${if_existing /proc/net/route eth0}Up:$color ${upspeed eth0} ${color grey} - Down:$color ${downspeed eth0} - ${addr eth0}
