--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -31,10 +31,10 @@ blur-background-fixed = true;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'",
-    "class_g = 'Conky'",
+    "class_g = 'Conky'"
 ];
 blur-kern = "3x3box";
-blur-method = "dual_kawase";
+blur-method = "kernel";
 blur-strength = 10;
 opacity-rule = [
   "90:class_g = 'Alacritty'"
