--- a/config/waybar/config
+++ b/config/waybar/config
@@ -6,13 +6,13 @@
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
 
-    "modules-left": ["wlr/workspaces"],
+    "modules-left": ["sway/workspaces"],
 
-    "modules-center": ["hyprland/window"],
+    "modules-center": ["sway/window"],
 
     "modules-right": ["tray", "idle_inhibitor", "pulseaudio", "network", "temperature", "battery", "battery#bat2", "clock"],
 
-    "wlr/workspaces": {
+    "sway/workspaces": {
     	"format": "{name}: {icon}",
     	"format-icons": {
     		"urgent": "",
