--- a/config/wofi/config
+++ b/config/wofi/config
@@ -4,9 +4,10 @@ allow_images=true
 allow_markup=true
 insensitive=true
 hide_scroll=true
-lines=10
+#lines=10
 no_actions=true
 term=alacritty
-width=600
-x=1420
-y=400
+width=50%
+height=40%
+#x=10
+#y=10
