--- a/config/hypr/colors.conf
+++ b/config/hypr/colors.conf
@@ -1,22 +1,22 @@
 # Main colors
-$bg-main = #1a2c3d        /* Il blu scuro del cielo */
-$bg-accent-bright = rgb(e6dfd8)
-$bg-accent = rgb(8b5e2b)
-$bg-secondary = rgb(d9e6f2)  /* Il beige chiaro delle sfumature */
-$text-normal = #2b2420    /* Il marrone scuro/nero dei dettagli */
+$bg-main = rgb(1F3B4D)      
+$bg-accent-bright = rgb(F4E9D7)  
+$bg-accent = rgb(B8873A)     
+$bg-secondary = rgb(D4E6F2)  
+$text-normal = rgb(2B2420)   
 
-# Special colors 
-$success-color = rgba(158, 206, 106, 0.8)
-$warning-color = rgba(224, 175, 104, 0.8)
-$critical-color = rgba(247, 118, 142, 0.8)
+# Special colors
+$success-color = rgb(83B465)
+$warning-color = rgb(D4A04D)
+$critical-color = rgb(C85D5D)
 
 # Shadows and effects
-$shadow-color = rgba(0, 0, 0, 0.3)
+$shadow-color = rgba(0, 0, 0, 0.5)
 
 # Additional accent variations
-$bg-accent-dim = rgba(230, 223, 216, 0.7)        
-$bg-accent-bright-hover = rgb(242, 238, 233)     
+$bg-accent-dim = rgb(D4C9B7)
+$bg-accent-bright-hover = rgb(FAF5ED)
 
 # Border colors
-$border-active = rgb(139, 94, 43)      
-$border-inactive = rgba(139, 94, 43, 0.35)
+$border-active = rgb(B8873A)
+$border-inactive = rgb(8A8B8C)
