--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -29,12 +29,15 @@ monitor=HDMI-A-1,preferred,auto,1
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = GTK_THEME,Adwaita-dark
+env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt5ct
+#env = QT_QPA_PLATFORM,wayland;xcb
 env = MOZ_ENABLE_WAYLAND,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # ==============================================================================
 #                              STARTUP PROGRAMS
@@ -43,8 +46,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 # Define your favorite apps
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
-$menu-search = wofi --show drun,run | xargs ~/.config/wofi/wofi-search.sh
+$menu = walker
 $logout = wlogout --protocol layer-shell
 $bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/waybar/style.css
 
@@ -54,6 +56,7 @@ $bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/
 exec-once = waypaper --restore
 
 exec-once = $bar
+exec-once=walker --gapplication-service
 
 exec-once = hypridle
 exec-once = swaync                    # notification daemon
@@ -71,8 +74,8 @@ general {
     gaps_out = 5
     border_size = 2
     
-    col.active_border = $bg-accent-bright $bg-accent 45deg
-    col.inactive_border = $bg-secondary
+    col.active_border = $border-active $bg-accent 45deg
+    col.inactive_border = $border-inactive $bg-accent 45deg
 
     layout = dwindle
     resize_on_border = true
@@ -91,7 +94,7 @@ general {
 
 # Sezione decoration corretta
 decoration {
-    rounding = 10  # Bordi più arrotondati come macOS
+    rounding = 5  # Bordi più arrotondati come macOS
 
     # Opacità calibrate per l'effetto macOS
     active_opacity = 0.95
@@ -112,15 +115,17 @@ decoration {
         vibrancy = 0.2
         special = true
         ignore_opacity = true
-    }
 
-    # Ombre più pronunciate in stile macOS
-    # drop_shadow = yes
-    # shadow_range = 12
-    # shadow_offset = 3 3
-    # shadow_render_power = 4
-    # shadow_scale = 1.0
-    # col.shadow = rgba(0000001A)
+        # layerrule = blur,waybar
+    }
+shadow {
+   enabled = yes
+   range = 150
+   render_power = 3
+   color = $shadow-color
+   offset = 0 20
+   scale = 1.0
+}
 }
 
 
@@ -148,25 +153,32 @@ animations {
 #                                INPUT SETTINGS
 # ==============================================================================
 
+
+    device {
+        name = tpps/2-synaptics-trackpoint
+       sensitivity = -0.6
+   }
+
+   device {
+    name = elan0676:00-04f3:3195-touchpad
+      natural_scroll = true
+        disable_while_typing = true
+        middle_button_emulation = false
+        tap-to-click = true
+        drag_lock = false
+   }
+
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options = caps:escape  # Maps Caps Lock to Escape
-    kb_rules =
+    # kb_variant =
+    # kb_model =
+    # kb_options = caps:escape  # Maps Caps Lock to Escape
+    # kb_rules =
     numlock_by_default = true
 
     follow_mouse = 1
     sensitivity = 0  # -1.0 - 1.0, 0 means no modification
 
-    touchpad {
-        natural_scroll = true
-        disable_while_typing = true
-        scroll_factor = 1.0
-        middle_button_emulation = false
-        tap-to-click = true
-        drag_lock = false
-    }
 }
 
 # ==============================================================================
@@ -179,7 +191,7 @@ dwindle {
     preserve_split = true
     force_split = 2
     permanent_direction_override = false
-    # no_gaps_when_only è stato rimosso, rimuoviamo questa opzione
+    # no_gaps_when_only = true è stato rimosso, rimuoviamo questa opzione
 }
 
 master {
@@ -219,6 +231,8 @@ windowrulev2 = float,title:^(Media viewer)$
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Firefox — Sharing Indicator)$
 
+windowrulev2 = float,class:^org\.mozilla\.firefox$,title:^(Extension: \(Bitwarden Password Manager\).*)$
+
 # Size rules
 windowrulev2 = size 800 600,class:^(com.saivert.pwvucontrol)$
 windowrulev2 = center,class:^(pavucontrol)$
@@ -241,7 +255,7 @@ bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exec, ~/.config/scripts/shot.sh && $logout
 bind = $mainMod, N, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, $menu-search
+bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
 bind = $mainMod, L, exec, hyprlock
