--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -46,7 +46,8 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # Define your favorite apps
 $terminal = kitty
 $fileManager = nautilus
-$menu = walker
+# $menu = walker
+$menu = wofi
 $logout = wlogout --protocol layer-shell
 $bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/waybar/style.css
 
@@ -61,9 +62,11 @@ exec-once=walker --gapplication-service
 exec-once = hypridle
 exec-once = swaync                    # notification daemon
 exec-once = nm-applet --indicator     # network manager
-# exec-once = blueman-applet            # bluetooth
+exec-once = blueman-applet            # bluetooth
 exec-once = systemctl --user start tuned
 exec-once = tuned-adm profile balanced
+
+exec-once =  flatpak run com.mattermost.Desktop
 
 # ==============================================================================
 #                             GENERAL CONFIGURATION
@@ -92,7 +95,6 @@ general {
 #                                  DECORATIONS
 # ==============================================================================
 
-# Sezione decoration corretta
 decoration {
     rounding = 5  # Bordi più arrotondati come macOS
 
@@ -115,19 +117,17 @@ decoration {
         vibrancy = 0.2
         special = true
         ignore_opacity = true
-
-        # layerrule = blur,waybar
     }
-shadow {
-   enabled = yes
-   range = 150
-   render_power = 3
-   color = $shadow-color
-   offset = 0 20
-   scale = 1.0
-}
-}
 
+    shadow {
+        enabled = yes
+        range = 150
+        render_power = 3
+        color = $shadow-color
+        offset = 0 20
+        scale = 1.0
+    }
+}
 
 # ==============================================================================
 #                                  ANIMATIONS
@@ -153,20 +153,19 @@ animations {
 #                                INPUT SETTINGS
 # ==============================================================================
 
+device {
+    name = tpps/2-synaptics-trackpoint
+    sensitivity = -0.6
+}
 
-    device {
-        name = tpps/2-synaptics-trackpoint
-       sensitivity = -0.6
-   }
-
-   device {
+device {
     name = elan0676:00-04f3:3195-touchpad
-      natural_scroll = true
-        disable_while_typing = true
-        middle_button_emulation = false
-        tap-to-click = true
-        drag_lock = false
-   }
+    natural_scroll = true
+    disable_while_typing = true
+    middle_button_emulation = false
+    tap-to-click = true
+    drag_lock = false
+}
 
 input {
     kb_layout = us
@@ -178,20 +177,17 @@ input {
 
     follow_mouse = 1
     sensitivity = 0  # -1.0 - 1.0, 0 means no modification
-
 }
 
 # ==============================================================================
 #                              LAYOUT SETTINGS
 # ==============================================================================
 
-# Sezione dwindle corretta
 dwindle {
     pseudotile = true
     preserve_split = true
     force_split = 2
     permanent_direction_override = false
-    # no_gaps_when_only = true è stato rimosso, rimuoviamo questa opzione
 }
 
 master {
@@ -219,22 +215,19 @@ gestures {
 # ==============================================================================
 
 # Opacity rules
-# windowrulev2 = opacity 0.92 0.92,class:^(kitty)$
-# windowrulev2 = opacity 0.95 0.95,class:^(firefox)$
-#  layerrule = blur,waybar
 layerrule = blur,wofi 
 
 # Floating rules
 windowrulev2 = float,class:^(com.saivert.pwvucontrol)$
+windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,title:^(Media viewer)$
-# windowrulev2 = float,title:^(Pipewire Volume Control)$
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Firefox — Sharing Indicator)$
-
 windowrulev2 = float,class:^org\.mozilla\.firefox$,title:^(Extension: \(Bitwarden Password Manager\).*)$
 
 # Size rules
 windowrulev2 = size 800 600,class:^(com.saivert.pwvucontrol)$
+windowrulev2 = size 800 600,class:^(blueman-manager)$
 windowrulev2 = center,class:^(pavucontrol)$
 
 # Workspace rules
@@ -283,6 +276,10 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+# ==============================================================================
+#                              WORKSPACE BINDINGS
+# ==============================================================================
+
 # Switch workspaces
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -323,11 +320,17 @@ bind = $mainMod CTRL, right, movecurrentworkspacetomonitor, r
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Multimedia keys
+# ==============================================================================
+#                              MULTIMEDIA KEYS
+# ==============================================================================
+
+# Volume controls
 bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+# Brightness controls
 bindel = , XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
@@ -344,10 +347,4 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
-    mouse_move_enables_dpms = true
-    key_press_enables_dpms = true
-    animate_manual_resizes = false
-    animate_mouse_windowdragging = false
-    enable_swallow = true
-    swallow_regex = ^(kitty)$
 }
