--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -9,7 +9,7 @@
 # ==============================================================================
 
 # Import color scheme
-source = ~/.config/hypr/colors.conf
+source = colors.conf
 
 # ==============================================================================
 #                               MONITOR SETUP
@@ -46,10 +46,11 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # Define your favorite apps
 $terminal = kitty
 $fileManager = nautilus
-# $menu = walker
-$menu = wofi
+$menu = walker
+#$menu = wofi
 $logout = wlogout --protocol layer-shell
 $bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/waybar/style.css
+$mattermost = flatpak run com.mattermost.Desktop workspace:[magic]
 
 # Autostart
 
@@ -60,13 +61,15 @@ exec-once = $bar
 exec-once=walker --gapplication-service
 
 exec-once = hypridle
+exec-once = hyprsunset
 exec-once = swaync                    # notification daemon
 exec-once = nm-applet --indicator     # network manager
 exec-once = blueman-applet            # bluetooth
 exec-once = systemctl --user start tuned
 exec-once = tuned-adm profile balanced
+exec-once = systemctl --user start hyprpolkitagent
 
-exec-once =  flatpak run com.mattermost.Desktop
+exec-once =  $mattermost
 
 # ==============================================================================
 #                             GENERAL CONFIGURATION
@@ -211,14 +214,22 @@ gestures {
 }
 
 # ==============================================================================
+#                               PLUGINS
+# ==============================================================================
+
+source = ./pluginsconfig/enabled.conf
+
+# ==============================================================================
 #                              WINDOW RULES
 # ==============================================================================
 
 # Opacity rules
 layerrule = blur,wofi 
+#  layerrule = blur, swaync 
 
 # Floating rules
 windowrulev2 = float,class:^(com.saivert.pwvucontrol)$
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,title:^(Media viewer)$
 windowrulev2 = float,title:^(Picture-in-Picture)$
@@ -228,12 +239,13 @@ windowrulev2 = float,class:^org\.mozilla\.firefox$,title:^(Extension: \(Bitwarde
 # Size rules
 windowrulev2 = size 800 600,class:^(com.saivert.pwvucontrol)$
 windowrulev2 = size 800 600,class:^(blueman-manager)$
-windowrulev2 = center,class:^(pavucontrol)$
+windowrulev2 = center,class:^(org.pulseaudio.pavucontrol)$
 
 # Workspace rules
 windowrulev2 = workspace 2 silent,class:^(firefox)$
 windowrulev2 = workspace 3 silent,class:^(thunderbird)$
 windowrulev2 = workspace 4 silent,class:^(spotify)$
+windowrulev2 = workspace magic,class:^(com.mattermost.Desktop)
 
 # ==============================================================================
 #                              KEYBINDINGS
@@ -254,6 +266,7 @@ bind = $mainMod, J, togglesplit,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, T, togglegroup
 bind = $mainMod, F, fullscreen
+bind = $mainMod, TAB, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
 # Screenshot configuration
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy                                                # Selected area → clipboard
@@ -346,5 +359,5 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 misc {
     disable_hyprland_logo = true
-    disable_splash_rendering = true
+    disable_splash_rendering = false
 }
