--- a/config/waybar/config
+++ b/config/waybar/config
@@ -3,7 +3,10 @@
     "height": 34,
     "spacing": 1,
     "modules-left": ["hyprland/workspaces", "hyprland/window"],
-    "modules-center": ["clock"],
+    "modules-center": [
+        "clock",
+        "custom/notification"
+],
     "modules-right": [
         "tray",
         "custom/updates",
@@ -111,11 +114,11 @@
         "default": ["󰕿", "󰖀", "󰕾"]
     },
     "scroll-step": 5,
-    "on-click": "gtk4-launch com.saivert.pwvucontrol",
+    "on-click": "pavucontrol",
     "on-click-right": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",  // Usa wpctl invece di pactl
     "on-scroll-up": "wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+",     // Controllo volume con wpctl
     "on-scroll-down": "wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-",
-    "max-volume": 150,                                               // Limita il volume massimo
+    "max-volume": 120,                                               // Limita il volume massimo
     "tooltip": true,
     "tooltip-format": "Volume: {volume}%\nDevice: {desc}"
 },
@@ -153,5 +156,25 @@
         "max-length": 50,
         "min-length": 3,
         "escape": true
-    }
+    },
+    "custom/notification": {
+        "tooltip": false,
+        "format": "{icon}",
+        "format-icons": {
+          "notification": "<span foreground='red'><sup></sup></span>",
+          "none": "",
+          "dnd-notification": "<span foreground='red'><sup></sup></span>",
+          "dnd-none": "",
+          "inhibited-notification": "<span foreground='red'><sup></sup></span>",
+          "inhibited-none": "",
+          "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+          "dnd-inhibited-none": ""
+        },
+        "return-type": "json",
+        "exec-if": "which swaync-client",
+        "exec": "swaync-client -swb",
+        "on-click": "swaync-client -t -sw",
+        "on-click-right": "swaync-client -d -sw",
+        "escape": true
+      }
 }
