--- a/config/swaync/config.json
+++ b/config/swaync/config.json
@@ -1,32 +1,54 @@
 {
-  "$schema": "/etc/xdg/swaync/configSchema.json",
-  "positionX": "right",
-  "positionY": "top",
-  "control-center-margin-top": 0,
-  "control-center-margin-bottom": 0,
-  "control-center-margin-right": 0,
-  "control-center-margin-left": 0,
-  "timeout": 10,
-  "timeout-low": 5,
-  "timeout-critical": 0,
-  "notification-window-width": 500,
-  "keyboard-shortcuts": true,
-  "image-visibility": "always",
-  "transition-time": 200,
-  "hide-on-clear": false,
-  "hide-on-action": true,
-  "script-fail-notify": true,
-  "scripts": {
-    "example-script": {
-      "exec": "echo 'Do something...'",
-      "urgency": "Normal"
-    }
-  },
-  "notification-visibility": {
-    "example-name": {
-      "state": "muted",
-      "urgency": "Low",
-      "app-name": "Spotify"
-    }
-  }
+	"$schema": "/etc/xdg/swaync/configSchema.json",
+
+	"positionX": "center",
+	"positionY": "top",
+	"control-center-margin-top": 5,
+	"control-center-margin-bottom": 5,
+	"control-center-margin-right": 5,
+	"control-center-margin-left": 5,
+	"control-center-width": 500,
+	"control-center-height": 600,
+	"fit-to-screen": false,
+
+	"layer": "top",
+	"cssPriority": "user",
+	"notification-icon-size": 64,
+	"notification-body-image-height": 100,
+	"notification-body-image-width": 200,
+	"timeout": 10,
+	"timeout-low": 5,
+	"timeout-critical": 0,
+	"notification-window-width": 500,
+	"keyboard-shortcuts": true,
+	"image-visibility": "when-available",
+	"transition-time": 200,
+	"hide-on-clear": true,
+	"hide-on-action": true,
+	"script-fail-notify": true,
+
+	"widgets": [
+		"title",
+		"dnd",
+		"mpris",
+		"notifications"
+	],
+	"widget-config": {
+		"title": {
+			"text": "Notifications",
+			"clear-all-button": true,
+			"button-text": "Clear All"
+		},
+		"dnd": {
+			"text": "Do Not Disturb"
+		},
+		"label": {
+			"max-lines": 5,
+			"text": "Label Text"
+		},
+		"mpris": {
+			"image-size": 96,
+			"image-radius": 12
+		}
+	}
 }
